final lending page version

--- a/index.html
+++ b/index.html
@@ -124,17 +124,59 @@
           <div class="goal-wrapper">
             <p class="paragraph-text">Наша мета 10 000 000 гривень!</p>
             <div class="goal-number">
-													<div class="number-text-wrapper">
-              <p class=" number-text-right number-text">00</p>
-													</div>
-              <p class="number-text">230</p>
-														<div class="number-text-wrapper">
-															<p class="number-text-left number-text">025</p>
-														</div>
+              <div class="number-text-wrapper">
+                <p class="number-text-right number-text">00</p>
+              </div>
+              <p class="number-text number-text-right-center">230</p>
+              <div class="number-text-wrapper">
+                <p class="number-text-left number-text">025</p>
+              </div>
             </div>
           </div>
         </article>
-        <button class="button-wrapper">Дізнатися більше</button>
+        <button class="button-wrapper header-nav-button">Дізнатися більше</button>
+      </section>
+      <section class="card-section card-section-info-bg">
+        <div class="contact-card article-wrapper">
+          <article class="contact-block">
+              <div class="contact-heading-wrapper">
+                <h5 class="title-h1 text-contact-black">КОНТАКТИ</h5>
+              </div>
+              <div class="contact-information-block">
+                <div class="contact-information-wrapper">
+                  <div>
+                    <img src="/assets/phone.svg" class="contact-icon" alt="contact">
+                    <p class="question-contact-paragraph">
+                      Якщо у вас виникають питання – телефонуйте за номером
+                      <span class="phone">0-987-654-321</span>
+                    </p>
+                  </div>
+              
+                  <div>
+                    <div class="contact-icon-container">
+                      <img src="/assets/whats-app.svg" class="contact-icon" alt="whats-app">
+                      <img src="/assets/telegram.svg" class="contact-icon" alt="telegram">
+                    </div>
+                    <p class="">Або пишіть нам у чат-бот</p>
+                  </div>
+                </div>
+            </div>
+          </article>
+          <div class="contact-info-image-card">
+            <div>
+              <img src="assets/email.svg" alt="email">
+            </div>
+            <div class="contact-form-block">
+              <form  class="contact-form" action="">
+                <p class="form-paragraph">Щоб дізнаватися усі новини фестивалю, підпишися на нашу розсилку</p>
+                <input type="text" placeholder="Ім'я">
+                <input type="email" placeholder="Емеил">
+                <button class="button-wrapper header-nav-button  submit-button" type="submit">Підписатися</button>
+              </form>
+            </div>
+          </div>
+        </div>
+        <div></div>
       </section>
     </main>
     <footer></footer>
